# hdviz

./: .flake8  .gitignore  LICENCE  README.md  cleanup.sh  install.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
docs/source/: conf.py  index.rst
hdviz/: __init__.py  colors.py  data.py  examples.py  functional.py  plotter.py  plotter_2d.py  plotter_3d.py  plotter_nd.py  plotting.py  utils.py
src/hdviz/: plotting.py  utls.py
tests/: test_adding_pointsets.py  test_data.py  test_plotter_2d.py  test_plotter_3d.py  test_plotter_nd.py
