[metadata]
# replace with your username:
name = hdviz
version = 0.0.1
author = Juho Timonen
author_email = juho.timonen@iki.fi
description = High-dimensional visualization
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jtimonen/hdviz
project_urls =
    Bug Tracker = https://github.com/jtimonen/hdviz/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
